Correcting link to coga

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
                                 <h3 class="title">CoGA</h3>
                                 <p class="summary"> R package with statistical tests for comparing gene co-expression networks.</p>
-                                <p><a class="more-link" href="http://www.ime.usp.br/~suzana/coga"><i class=class="fa fa-external-link"></i> Find out more</a></p>
+                                <p><a class="more-link" href="http://www.ime.usp.br/~suzana/coga"><i class="fa fa-external-link"></i> Find out more</a></p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">statGraph</h3>
