Updating publication list

--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
 <li> Jardim VC, <b>Santos SS</b>, Fujita A and Buckeridge MS. BioNetStat: A Tool for Biological Networks Differential Analysis. <i>Frontiers in Genetics</i>. 10:594, 2019.</li>
 </br>
 
-<li> Fujita A, Lira ES, <b>Santos SS</b>, Bando SY, Soares GE, Takahashi DY. A semi-parametric statistical test to compare complex networks. </i>Journal of Complex Networks</i>. cnz028, https://doi.org/10.1093/comnet/cnz028 (in press).
+<li> Fujita A, Lira ES, <b>Santos SS</b>, Bando SY, Soares GE, Takahashi DY. A semi-parametric statistical test to compare complex networks. <i>Journal of Complex Networks</i>. cnz028, https://doi.org/10.1093/comnet/cnz028 (in press).
+</li>
+
+<li>
+Franco YEM, Alves MJ, Uno M, Moretti IF, Trombetta-Lima M, Santos SS, Santos AF, Arini GS, Baptista MS, Lerario AM, Oba-Shinjo SM, Marie SKN. Glutaminolysis dynamics during astrocytoma progression correlates with tumor aggressiveness. <i>Cancer Metab.</i> 9(1):18, 2021
 </li>
 
                             </ul>
