Updating publication list

--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@
 
 <li> Fujita A, Lira ES, <b>Santos SS</b>, Bando SY, Soares GE, Takahashi DY. A semi-parametric statistical test to compare complex networks. <i>Journal of Complex Networks</i>. cnz028, https://doi.org/10.1093/comnet/cnz028 (in press).
 </li>
+</br>
 
 <li>
-Franco YEM, Alves MJ, Uno M, Moretti IF, Trombetta-Lima M, Santos SS, Santos AF, Arini GS, Baptista MS, Lerario AM, Oba-Shinjo SM, Marie SKN. Glutaminolysis dynamics during astrocytoma progression correlates with tumor aggressiveness. <i>Cancer Metab.</i> 9(1):18, 2021
+Franco YEM, Alves MJ, Uno M, Moretti IF, Trombetta-Lima M, <b>Santos SS</b>, Santos AF, Arini GS, Baptista MS, Lerario AM, Oba-Shinjo SM, Marie SKN. Glutaminolysis dynamics during astrocytoma progression correlates with tumor aggressiveness. <i>Cancer Metab.</i> 9(1):18, 2021
 </li>
 
                             </ul>
