--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="container">                       
             <img class="profile-image img-responsive pull-left" src="images/profile.png" alt="Suzana Santos" />
             <div class="profile-content pull-left">
-                <h1 class="name">Suzana Santos</h1>
+                <h1 class="name">Suzana de Siqueira Santos</h1>
                 <h2 class="desc">Researcher</h2>   
                 <!--<ul class="social list-inline">
                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>                   
@@ -97,13 +97,25 @@
 <li> Jardim VC, <b>Santos SS</b>, Fujita A and Buckeridge MS. BioNetStat: A Tool for Biological Networks Differential Analysis. <i>Frontiers in Genetics</i>. 10:594, 2019.</li>
 </br>
 
-<li> Fujita A, Lira ES, <b>Santos SS</b>, Bando SY, Soares GE, Takahashi DY. A semi-parametric statistical test to compare complex networks. <i>Journal of Complex Networks</i>. cnz028, https://doi.org/10.1093/comnet/cnz028 (in press).
+<li> Fujita A, Lira ES, <b>Santos SS</b>, Bando SY, Soares GE, Takahashi DY. A semi-parametric statistical test to compare complex networks. <i>Journal of Complex Networks</i>. Volume 8, Issue 2, April 2020, cnz028, https://doi.org/10.1093/comnet/cnz028.
 </li>
 </br>
 
 <li>
 Franco YEM, Alves MJ, Uno M, Moretti IF, Trombetta-Lima M, <b>Santos SS</b>, Santos AF, Arini GS, Baptista MS, Lerario AM, Oba-Shinjo SM, Marie SKN. Glutaminolysis dynamics during astrocytoma progression correlates with tumor aggressiveness. <i>Cancer Metab.</i> 9(1):18, 2021
 </li>
+</br>
+
+<li>
+<b>Santos SS</b>, Fujita A, Matias C. Spectral density of random graphs: convergence properties and application in model fitting. <i>Journal of Complex Networks</i>. Volume 9, Issue 6, December 2021, cnab041, https://doi.org/10.1093/comnet/cnab041 
+</li>
+</br>
+
+<li>
+<b>Santos SS</b>, Torres M, Galeano D, Sánchez MM, Cernuzzi L, Paccanaro A. Machine Learning and Network Medicine approaches for Drug Repositioning for COVID-19. <i>Patterns</i> (N Y). 2021 Nov 9:100396. doi: 10.1016/j.patter.2021.100396. Epub ahead of print. 
+</li>
+
+
 
                             </ul>
 			  </div>
