Updating list of publications.

--- a/index.html
+++ b/index.html
@@ -112,9 +112,12 @@ Franco YEM, Alves MJ, Uno M, Moretti IF, Trombetta-Lima M, <b>Santos SS</b>, San
 </br>
 
 <li>
-<b>Santos SS</b>, Torres M, Galeano D, Sánchez MM, Cernuzzi L, Paccanaro A. Machine Learning and Network Medicine approaches for Drug Repositioning for COVID-19. <i>Patterns</i> (N Y). 2021 Nov 9:100396. doi: 10.1016/j.patter.2021.100396. Epub ahead of print. 
+<b>Santos SS</b>, Torres M, Galeano D, Sánchez MM, Cernuzzi L, Paccanaro A. Machine Learning and Network Medicine approaches for Drug Repositioning for COVID-19. <i>Patterns</i> (N Y).  2022 Jan 14;3(1):100396. doi: 10.1016/j.patter.2021.100396.
 </li>
 
+<li>
+    Sacramento CQ, Fintelman-Rodrigues N, Dias SSG, Temerozo JR, Da Silva AdPD, da Silva CS, Blanco C, Ferreira AC, Mattos M, Soares VC, Pereira-Dutra F, Miranda MD, Barreto-Vieira DF, da Silva MAN, <b>Santos SS</b>, Torres M, Chaves OA, Rajoli RKR, Paccanaro, A, Owen A, Bou-Habib, DC, Bozza, PT, Souza, TML. Unlike Chloroquine, Mefloquine Inhibits SARS-CoV-2 Infection in Physiologically Relevant Cells. <i>Viruses</i> 2022, 14, 374. https://doi.org/10.3390/v14020374 
+</li>    
 
 
                             </ul>
