--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <img class="profile-image img-responsive pull-left" src="images/profile.png" alt="Suzana Santos" />
             <div class="profile-content pull-left">
                 <h1 class="name">Suzana de Siqueira Santos</h1>
-                <h2 class="desc">Researcher</h2>   
+                <!-- <h2 class="desc">Researcher</h2> -->   
                 <!--<ul class="social list-inline">
                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>                   
                     <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
