--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@ Franco YEM, Alves MJ, Uno M, Moretti IF, Trombetta-Lima M, <b>Santos SS</b>, San
                         <h2 class="heading sr-only">Basic Information</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>FGV-EMAp, Rio de Janeiro, Brazil</li>
-                                <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">suzana DOT santos AT fgv DOT br</a></li>
+                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>UFABC-CMCC, Santo André, São Paulo, Brazil</li>
+                                <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">suzana DOT siqueira AT ufabc DOT edu DOT br</a></li>
                             </ul>
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
