--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I am a visiting professor at the Center for Mathematics, Computing and Cognition, in UFABC, the Federal University of ABC, in Santo André, São Paulo, Brazil. I teach computer science courses and work with the development of methods for problems involving graphs, machine learning, specially in the biology, and pharmacology field. Below you can find a short bio, a list of my publications and links to my google scholar and lattes (CV) profiles.</p>
+                            <p>I am a visiting professor at the Center for Mathematics, Computing and Cognition, in UFABC, the Federal University of ABC, in Santo André, São Paulo, Brazil. I teach computer science courses and work with the development of methods for problems involving graphs, machine learning, applied to maily to biology, Medicine, and pharmacology. Below you can find a short bio, a list of my publications and links to my google scholar and lattes (CV) profiles.</p>
 
                             <p><b>Short bio:</b> I obtained my bachelor (2012), master (2015), and PhD (2020) in computer science at the Institute of Mathematics and Statistics, University of São Paulo. Both my master and doctoral thesis were supervised by Prof. André Fujita. During my masters, I developed a statistical test to compare gene co-expression networks. Later, in my doctorate, I did a research internship at the Laboratory of Probability, Statistics and Modeling, Sorbonne University, under supervision of Prof. Catherine Matias. We proved the consistency of a parameter estimation procedure for random graphs developed by our research group, which is based on the spectral density. I also studied properties of the largest eigenvalue of random graphs and applied this knowledge to the analysis of brain functional networks. Between 2020 and 2023, I was a postdoc fellow at the PaccanaroLab, in the School of Applied Mathematics, Fundação Getulio Vargas, Rio de Janeiro, under the supervision of Prof. Alberto Paccanaro, where I worked with  computational biology and machine learning problems. I developed methods for drug repositioning against viral diseases, including COVID-19. Since november 2023 I am a visiting professor at the Center for Mathematics, Computing and Cognition, in the Federal University of UFABC, Santo André. My current research relies on diverse areas such as matrix decomposition models, network medicine and random graphs.</p>        
                         </div><!--//content-->
@@ -65,16 +65,18 @@
                <section class="latest section">
                     <div class="section-inner">
                         <h2 class="heading">Research interests</h2>
-                        <div class="content">    
-                                               
+                        <div class="content">             
                             <ul>
 				  <li>Complex networks</li>
 				  <li>Random graphs</li>
-				  <li>Network Medicine</li>
 				  <li>Matrix decomposition models</li>
 				  <li>Machine learning -- with focus on interpretability</li>  
-				  <li>Collaborative filtering</li>   
-				  <li>Computational biology</li>    
+				  <li>Collaborative filtering</li>
+				  <li>Network Medicine</li>
+				  <li>Computational biology and bioinformatics</li>
+				  <li>Systems pharmacology</li>  
+				  <li>Systems biology</li>
+				  <li>Applications in complex diseases and neuroscience</li> 
 			   </ul>                            
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
