Correcting lattes link

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ Franco YEM, Alves MJ, Uno M, Moretti IF, Trombetta-Lima M, <b>Santos SS</b>, San
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> BSc Computer Science</h3>
                                 <h4 class="university">University of São Paulo <span class="year">(2009-2012)</span></h4>
                             </div><!--//item-->
-				<p>To see my lattes (brazilian CV platform) profile click <a class="more-link" href="http://lattes.cnpq.br/2334143070581494l"><i class="fa fa-external-link"></i>here</a>.</p>
+				<p>To see my lattes (brazilian CV platform) profile click <a class="more-link" href=" http://lattes.cnpq.br/2334143070581494"><i class="fa fa-external-link"></i>here</a>.</p>
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </aside><!--//section-->
